Fix search bar width on Firefox

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -36,6 +36,7 @@ html, body {
 
 .tresdb-map-menu {
   padding: 0.9em;
+  width: 100%; /* Firefox support */
 }
 
 #tresdb-toolbar-main {
